--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
     mavenCentral()
 }
 
+//TODO: change the main class to com.n9mtq4.ld33.yatm.launcher.Launcher
 jar {
     manifest {
         attributes 'Main-Class': 'com.n9mtq4.ld33.yatm.game.YouAreTheMonster'
